--- a/Module_1/Case_Study/Yeu_cau_6_quan_ly_hoc_vien/style.css
+++ b/Module_1/Case_Study/Yeu_cau_6_quan_ly_hoc_vien/style.css
@@ -2,3 +2,28 @@ h1 {
     text-align: center;
     color: #0d77e1;
 }
+.tieude {
+    float: center
+}
+
+body {
+    margin: 0;
+    padding: 0;
+    font-family: Arial, sans-serif;
+}
+
+.tableStudent {
+    text-align: center;
+    max-width:800px;
+    margin: 0 auto;
+    padding: 30px;
+
+    width:700px;
+    }
+
+
+.horizontal-line {
+    width: 500%;
+    border-bottom: 2px solid #000; /* Màu sắc và độ dày của đường ngang */
+    margin: 20px 0; /* Khoảng cách trên và dưới đường ngang */
+}
